--- a/workshop/fruit-shop-basket/src/app/receipt/receipt.component.html
+++ b/workshop/fruit-shop-basket/src/app/receipt/receipt.component.html
@@ -1,21 +1,29 @@
-<p>My Receipt</p>
+<div class="card">
+    <div class="card-header">
+        <h1>My Receipt</h1>
+    </div>
 
-<div *ngIf="receipt">
-    <h3>Fruits</h3>
-    <table>
-        <tr *ngFor="let item of receipt.items">
-            <td>{{ item.quantity }} {{ item.fruit }}</td>
-            <td>{{ item.total }} €</td>
-        </tr>
-    </table>
+    <div class="card-body" *ngIf="receipt">
+        <h3>Fruits</h3>
+        <table class="table table-striped">
+            <tbody>
+                <tr *ngFor="let item of receipt.items">
+                    <td>{{ item.quantity }} {{ item.fruit }}</td>
+                    <td>{{ item.total }} €</td>
+                </tr>
+            </tbody>
+        </table>
 
-    <h3>Discounts</h3>
-    <table>
-        <tr *ngFor="let discount of receipt.discounts">
-            <td>{{ discount.name }}</td>
-            <td> -{{ discount.amount }} €</td>
-        </tr>
-    </table>
+        <h3>Discounts</h3>
+        <table class="table table-striped">
+            <tbody>
+                <tr *ngFor="let discount of receipt.discounts">
+                    <td>{{ discount.name }}</td>
+                    <td> -{{ discount.amount }} €</td>
+                </tr>
+            </tbody>
+        </table>
 
-    <h3>Total {{ receipt.total }} €</h3>
+        <h3>Total {{ receipt.total }} €</h3>
+    </div>
 </div>
